--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,16 @@
   width: 100%;
 }
 
-.waveButton {
+.beerButton {
   cursor: pointer;
   margin-top: 16px;
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
+}
+
+.beerContainer {
+  background-color: aquamarine;
+  margin: 16px 0;
+  padding: 8px;
 }
